--- a/default.project.json
+++ b/default.project.json
@@ -6,6 +6,9 @@
     "ReplicatedStorage": {
       "Shared": {
         "$path": "src/shared"
+      },
+      "Roact": {
+        "$path": "Roact"
       }
     },
 
